# tidbyt-rs

./: .gitignore  Cargo.toml  README.md  index.html
src/: adjusted_color.rs  aqi.rs  draw_buffer.rs  email.rs  image.rs  main.rs  month.rs  pusher.rs  strava.rs  uv.rs  weather.rs
